--- a/src/Core/Framework/Resources/views/documents/includes/letter_header.html.twig
+++ b/src/Core/Framework/Resources/views/documents/includes/letter_header.html.twig
@@ -13,14 +13,18 @@ All blocks of this template are available in the template which renders this tem
     <div class="letter-header">
         <div class="recipient-address-container">
             {% block document_recipient %}
-                {% set notSpecified = billingAddress.salutation.salutationKey is same as('not_specified') %}
-
                 {% if feature('v6.5.0.0') %}
                     {% sw_include '@Framework/snippets/render.html.twig' with {
                         format: billingAddress.country.translated.addressFormat,
                         address: billingAddress
                     } %}<br/>
+
+                    {% if customer.customer.vatIds and billingAddress.country.companyTax.enabled and config.displayAdditionalNoteDelivery and billingAddress.country.id in config.deliveryCountries %}
+                        {{ 'document.vatId'|trans({'%vatId%': customer.customer.vatIds|first})|sw_sanitize }}<br>
+                    {% endif %}
                 {% else %}
+                    {% set notSpecified = billingAddress.salutation.salutationKey is same as('not_specified') %}
+
                     {# @deprecated tag:v6.5.0 - Block will be removed #}
                     {% block document_recipient_sender %}
                         {% if config.displayCompanyAddress and config.companyAddress is not empty %}
@@ -31,7 +35,7 @@ All blocks of this template are available in the template which renders this tem
                     {% if billingAddress.company %}
                         {{ billingAddress.company }}<br>
                     {% endif %}
-                    {% if customer.customer.vatIds and billingAddress.country.companyTax.getEnabled and config.displayAdditionalNoteDelivery and billingAddress.country.id in config.deliveryCountries %}
+                    {% if customer.customer.vatIds and billingAddress.country.companyTax.enabled and config.displayAdditionalNoteDelivery and billingAddress.country.id in config.deliveryCountries %}
                         {{ 'document.vatId'|trans({'%vatId%': customer.customer.vatIds|first})|sw_sanitize }}<br>
                     {% endif %}
                     {% if not notSpecified and billingAddress.salutation and billingAddress.salutation.id is not same as(constant('Shopware\\Core\\Defaults::SALUTATION')) %}{{ billingAddress.salutation.displayName ~ ' ' }}{% endif %}{{ billingAddress.firstName }} {{ billingAddress.lastName }}<br>
