--- a/src/Core/Framework/Resources/views/snippets/address/salutation.html.twig
+++ b/src/Core/Framework/Resources/views/snippets/address/salutation.html.twig
@@ -1,5 +1,5 @@
 {% block sw_snippet_element_salutation %}
-    {% if address.salutation and address.salutation.salutationKey != 'not_specified' %}
+    {% if address.salutation and address.salutation.salutationKey != 'not_specified' and address.salutation.id is not same as(constant('Shopware\\Core\\Defaults::SALUTATION')) %}
         {% block component_address_salutation %}
             {{ address.salutation.translated.displayName }}
         {% endblock %}
