Remove useless selection feature

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
@@ -102,6 +102,7 @@
         v-if="showDataGrid"
         :data-source="priceGroup.prices"
         :columns="ruleColumns"
+        :show-selection="false"
         :show-settings="true"
         :compact-mode="true"
     >
