NEXT-18605 - Fix wrong created date in order detail

--- a/src/Administration/Resources/app/administration/src/module/sw-order/view/sw-order-detail-details/sw-order-detail-details.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/view/sw-order-detail-details/sw-order-detail-details.html.twig
@@ -243,6 +243,7 @@
     <sw-order-state-history-modal
         v-if="showStateHistoryModal"
         :order="order"
+        :is-loading="isLoading"
         @modal-close="showStateHistoryModal = false"
     />
     {% endblock %}
