NEXT-23660 - Add title for extension description to show complete text fixes #2760

--- a/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-card-base/sw-extension-card-base.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-extension/component/sw-extension-card-base/sw-extension-card-base.html.twig
@@ -65,7 +65,10 @@
 
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_extension_card_base_info_description %}
-        <section class="sw-extension-card-base__info-description">
+        <section
+            class="sw-extension-card-base__info-description"
+            :title="description"
+        >
             {{ description }}
         </section>
         {% endblock %}
