--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block.scss
@@ -61,4 +61,60 @@ $sw-cms-block-color-warning: $color-pumpkin-spice-500;
     &.has--warning > .sw-cms-block__config-overlay {
         border: none;
     }
+
+    &__visibility {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
+        flex-grow: 1;
+        padding: 20px;
+        background-color: $color-gray-100;
+
+        &-wrapper {
+            display: flex;
+            padding: 24px;
+            justify-content: center;
+            color: $color-darkgray-200;
+
+            &.is--expanded {
+                padding-bottom: 0;
+                padding-top: 0;
+
+                .sw-cms-block__visibility {
+                    padding: 24px 0 0;
+                    background-color: transparent;
+                }
+            }
+        }
+
+        .sw-icon {
+            color: $color-gray-900;
+        }
+
+        &-text {
+            line-height: 25px;
+        }
+
+        &-btn {
+            color: $color-shopware-brand-500;
+            background-color: transparent;
+            border: none;
+            display: inline-flex;
+            gap: 4px;
+            align-items: center;
+            cursor: pointer;
+            font-size: 16px;
+            line-height: 25px;
+            font-family: $font-family-default;
+
+            .sw-icon {
+                color: inherit;
+            }
+        }
+    }
+
+    &__content.is--expanded {
+        opacity: 0.6;
+    }
 }
