NEXT-23320 - Improve media module error handling

--- a/src/Administration/Resources/app/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -182,7 +182,7 @@
         <sw-media-modal-folder-settings
             v-if="showSettings"
             :disabled="!allowEdit"
-            :folder="item"
+            :media-folder-id="item.id"
             @media-settings-modal-save="refreshIconConfig"
             @media-settings-modal-close="closeSettings"
         />
