--- a/src/Administration/Resources/app/administration/src/module/sw-media/component/sidebar/sw-media-folder-info/sw-media-folder-info.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-media/component/sidebar/sw-media-folder-info/sw-media-folder-info.html.twig
@@ -115,6 +115,7 @@
                 {% block sw_media_quickinfo_folder_metadata_content_base %}
                 <sw-media-quickinfo-metadata-item
                     class="sw-media-quickinfo-metadata-name"
+                    :class="nameItemClasses"
                     :label-name="$tc('sw-media.sidebar.metadata.name')"
                     :truncated="false"
                 >
@@ -124,6 +125,7 @@
                         :disabled="!acl.can('media.creator')"
                         compact
                         :value="mediaFolder.name"
+                        :error="mediaFolderNameError"
                         @input="onChangeFolderName"
                     />
                     <template v-else>
@@ -149,7 +151,7 @@
     <sw-media-modal-folder-settings
         v-if="showFolderSettings"
         :disabled="!acl.can('media.editor')"
-        :folder="mediaFolder"
+        :media-folder-id="mediaFolder.id"
         @media-settings-modal-save="closeFolderSettings"
         @media-settings-modal-close="closeFolderSettings"
     />
