--- a/src/Administration/Resources/app/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
@@ -89,6 +89,7 @@
                     @media-folder-remove="removeNewFolder"
                     @media-folder-dissolve="refreshList"
                     @media-folder-move="refreshList"
+                    @media-folder-changed="refreshList"
                     v-on="mediaItemSelectionHandler"
                 />
                 {% endblock %}
