fix: Hide empty preview and description elements of sw-select-result

--- a/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-select-result/sw-select-result.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/base/sw-select-result/sw-select-result.html.twig
@@ -9,7 +9,10 @@
 >
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_select_result_item_preview %}
-    <span class="sw-select-result__result-item-preview">
+    <span
+        v-if="hasPreviewSlot"
+        class="sw-select-result__result-item-preview"
+    >
         <slot name="preview"></slot>
     </span>
     {% endblock %}
