Write URL in admin snippets correctly

--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/sw-sales-channel-detail-domains/sw-sales-channel-detail-domains.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/sw-sales-channel-detail-domains/sw-sales-channel-detail-domains.html.twig
@@ -140,7 +140,7 @@
                 type="text"
                 omit-url-hash
                 omit-url-search
-                label="Url"
+                :label="$tc('sw-sales-channel.detail.labelInputUrl')"
                 :error="error"
                 @input="onInput"
             />
