NEXT-23780 - Remove shadow from admin sw-hero card fixes #2785

--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.scss
@@ -18,7 +18,9 @@
     position: relative;
     color: $color-darkgray-200;
 
-    @include drop-shadow-default;
+    &:not(.sw-card--hero) {
+        @include drop-shadow-default;
+    }
 
     &__context-menu {
         position: absolute;
