--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-visibility-config/sw-cms-visibility-config.html
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-visibility-config/sw-cms-visibility-config.html
@@ -7,25 +7,37 @@
     >
         <label class="sw-cms-visibility-config__checkbox">
             {{ $tc('sw-cms.sidebar.contentMenu.visibilityMobile') }}
-            <input class="sw-cms-visibility-config__checkbox-input" type="checkbox" v-model="visibility.mobile">
+            <input
+                class="sw-cms-visibility-config__checkbox-input"
+                type="checkbox"
+                v-model="visibility.mobile"
+            >
             <sw-icon
-                :name="visibility.mobile ? 'regular-mobile' : 'custom-hide-device-mobile'"
+                :name="visibility.mobile ? 'regular-mobile' : 'regular-mobile-slash'"
                 size="24"
             />
         </label>
         <label class="sw-cms-visibility-config__checkbox">
             {{ $tc('sw-cms.sidebar.contentMenu.visibilityTablet') }}
-            <input class="sw-cms-visibility-config__checkbox-input" type="checkbox" v-model="visibility.tablet">
+            <input
+                class="sw-cms-visibility-config__checkbox-input"
+                type="checkbox"
+                v-model="visibility.tablet"
+            >
             <sw-icon
-                :name="visibility.tablet ? 'regular-tablet' : 'custom-hide-device-tablet'"
+                :name="visibility.tablet ? 'regular-tablet' : 'regular-tablet-slash'"
                 size="24"
             />
         </label>
         <label class="sw-cms-visibility-config__checkbox">
             {{ $tc('sw-cms.sidebar.contentMenu.visibilityDesktop') }}
-            <input class="sw-cms-visibility-config__checkbox-input" type="checkbox" v-model="visibility.desktop">
+            <input
+                class="sw-cms-visibility-config__checkbox-input"
+                type="checkbox"
+                v-model="visibility.desktop"
+            >
             <sw-icon
-                :name="visibility.desktop ? 'regular-desktop' : 'custom-hide-device-desktop'"
+                :name="visibility.desktop ? 'regular-desktop' : 'regular-desktop-slash'"
                 size="24"
             />
         </label>
