Add order tax status footnote

--- a/src/Storefront/Resources/views/storefront/component/line-item/element/total-price.html.twig
+++ b/src/Storefront/Resources/views/storefront/component/line-item/element/total-price.html.twig
@@ -1,4 +1,10 @@
 {% block component_line_item_total_price %}
+    {% set taxFootNote = "general.star"|trans|sw_sanitize %}
+
+    {% if not isTaxStateSame %}
+        {% set taxFootNote = ("general.star"|trans|sw_sanitize) ~ ("general.star"|trans|sw_sanitize) %}
+    {% endif %}
+
     {% block component_line_item_total_price_label %}
         <div class="line-item-total-price-label">
             {{ "checkout.cartHeaderTotalPrice"|trans|sw_sanitize }}
@@ -9,14 +15,14 @@
         <div class="line-item-total-price-value">
             {# Shipping costs discounts always have a price of 0, which might be confusing, therefore we do not show those #}
             {% if lineItem.payload.discountScope != 'delivery' %}
-                {{ lineItem.price.totalPrice|currency }}{{ "general.star"|trans|sw_sanitize }}
+                {{ lineItem.price.totalPrice|currency }}{{ taxFootNote }}
             {% endif %}
 
             {% set referencePrice = lineItem.price.referencePrice %}
             {% if referencePrice is not null and displayMode == 'offcanvas' %}
                 <br />
                 <small class="line-item-reference-price">
-                    ({{ referencePrice.price|currency }}{{ "general.star"|trans|sw_sanitize }} / {{ referencePrice.referenceUnit }}&nbsp;{{ referencePrice.unitName }})
+                    ({{ referencePrice.price|currency }}{{ taxFootNote }} / {{ referencePrice.referenceUnit }}&nbsp;{{ referencePrice.unitName }})
                 </small>
             {% endif %}
         </div>
