--- a/src/Storefront/Resources/views/storefront/component/line-item/element/unit-price.html.twig
+++ b/src/Storefront/Resources/views/storefront/component/line-item/element/unit-price.html.twig
@@ -1,4 +1,10 @@
 {% block component_line_item_unit_price %}
+    {% set taxFootNote = "general.star"|trans|sw_sanitize %}
+
+    {% if not isTaxStateSame %}
+        {% set taxFootNote = ("general.star"|trans|sw_sanitize) ~ ("general.star"|trans|sw_sanitize) %}
+    {% endif %}
+
     {% block component_line_item_unit_price_label %}
         <div class="line-item-unit-price-label">
             {{ "checkout.cartHeaderUnitPrice"|trans|sw_sanitize }}
@@ -6,6 +12,6 @@
     {% endblock %}
 
     {% block component_line_item_unit_price_inner %}
-        {{ lineItem.price.unitPrice|currency }}{{ "general.star"|trans|sw_sanitize }}
+        {{ lineItem.price.unitPrice|currency }}{{ taxFootNote }}
     {% endblock %}
 {% endblock %}
