NEXT-23828 - Fixed changelog, eslint and jest test

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -391,14 +391,16 @@
                                     </sw-context-menu-item>
                                     {% endblock %}
 
+                                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                                     {% block sw_cms_list_listing_list_item_option_rename %}
-                                        <sw-context-menu-item
-                                            :disabled="!acl.can('cms.editor')"
-                                            v-if="!cmsPage.locked"
-                                            @click="onRenameCmsPage(cmsPage)"
-                                        >
-                                            {{ $tc('sw-cms.components.cmsListItem.rename') }}
-                                        </sw-context-menu-item>
+                                    <sw-context-menu-item
+                                        v-if="!item.locked"
+                                        :disabled="!acl.can('cms.editor')"
+                                        class="sw-cms-list__context-menu-item-rename"
+                                        @click="onRenameCmsPage(item)"
+                                    >
+                                        {{ $tc('sw-cms.components.cmsListItem.rename') }}
+                                    </sw-context-menu-item>
                                     {% endblock %}
 
                                     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
@@ -490,46 +492,53 @@
             @close="onCloseLayoutSetAsDefault"
         />
 
+        <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_cms_list_rename_modal %}
-            <sw-modal
-                v-if="showRenameModal"
-                :title="$tc('sw-cms.components.cmsListItem.modal.renameModalTitle')"
-                variant="small"
-                @modal-close="onCloseRenameModal"
-            >
+        <sw-modal
+            v-if="showRenameModal"
+            :title="$tc('sw-cms.components.cmsListItem.modal.renameModalTitle')"
+            variant="small"
+            @modal-close="onCloseRenameModal"
+        >
 
-                {% block sw_cms_list_rename_modal_confirm_rename_input %}
-                    <div>{{ $tc('sw-cms.components.cmsListItem.modal.textRenameConfirm', 0,
-                        { pageName: currentPage.translated.name || currentPage.name }) }}</div>
-                    <sw-text-field
-                        v-model="newName"
-                        size="medium"
-                    />
+            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+            {% block sw_cms_list_rename_modal_confirm_rename_input %}
+            <div class="sw_tree__confirm-rename-text">
+                {{ $tc('sw-cms.components.cmsListItem.modal.textRenameConfirm', 0, { pageName: currentPage.translated.name || currentPage.name }) }}
+            </div>
+            <sw-text-field
+                v-model="newName"
+                class="sw_tree__confirm-rename-text-field"
+                size="medium"
+            />
+            {% endblock %}
+
+            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+            {% block sw_cms_list_rename_modal_footer %}
+            <template slot="modal-footer">
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                {% block sw_cms_list_rename_modal_cancel %}
+                <sw-button
+                    size="small"
+                    @click="onCloseRenameModal"
+                >
+                    {{ $tc('sw-cms.components.cmsListItem.modal.buttonCancel') }}
+                </sw-button>
                 {% endblock %}
 
-                {% block sw_cms_list_rename_modal_footer %}
-                    <template slot="modal-footer">
-                        {% block sw_cms_list_rename_modal_cancel %}
-                            <sw-button
-                                size="small"
-                                @click="onCloseRenameModal"
-                            >
-                                {{ $tc('sw-cms.components.cmsListItem.modal.buttonCancel') }}
-                            </sw-button>
-                        {% endblock %}
-
-                        {% block sw_cms_list_rename_modal_confirm %}
-                            <sw-button
-                                size="small"
-                                variant="primary"
-                                @click="onConfirmPageRename"
-                            >
-                                {{ $tc('sw-cms.components.cmsListItem.modal.buttonRename') }}
-                            </sw-button>
-                        {% endblock %}
-                    </template>
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                {% block sw_cms_list_rename_modal_confirm %}
+                <sw-button
+                    size="small"
+                    variant="primary"
+                    @click="onConfirmPageRename"
+                >
+                    {{ $tc('sw-cms.components.cmsListItem.modal.buttonRename') }}
+                </sw-button>
                 {% endblock %}
-            </sw-modal>
+            </template>
+            {% endblock %}
+        </sw-modal>
         {% endblock %}
 
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
