--- a/src/Administration/Resources/app/administration/src/module/sw-flow/view/detail/sw-flow-detail-flow/sw-flow-detail-flow.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/view/detail/sw-flow-detail-flow/sw-flow-detail-flow.scss
@@ -10,6 +10,10 @@
         transition: max-width 0.3s ease-in-out;
     }
 
+    &__warning-box.sw-alert {
+        margin-bottom: 40px;
+    }
+
     &__trigger-card {
         display: grid;
         grid-template-columns: auto 1fr;
