NEXT-23465 - Default layout info text should be changed

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar.html.twig
@@ -548,7 +548,7 @@
             </h3>
 
             <p class="sw-cms-sidebar__layout-set-as-default-info-text">
-                {{ $tc('sw-cms.sidebar.layoutSetAsDefault.infoText') }}
+                {{ $tc('sw-cms.components.setDefaultLayoutModal.infoText') }}
             </p>
 
             <sw-button
