Added consideration of sorting via "position" for the output of the shipping methods
Actually the Shopware 6 documentation mentions the possibility for sorting the shipping the methods.
So far so good.
But the related twig template does not consider this.
I added "|sort((a, b) => a.position <=> b.position)" to line #9 to make this worg.

--- a/src/Storefront/Resources/views/storefront/component/shipping/shipping-fields.html.twig
+++ b/src/Storefront/Resources/views/storefront/component/shipping/shipping-fields.html.twig
@@ -6,7 +6,7 @@
 {% block component_shipping_methods %}
     <div class="shipping-methods">
         {% block component_shipping_method %}
-            {% for shipping in page.shippingMethods[:visibleShippingMethodsLimit] %}
+            {% for shipping in page.shippingMethods[:visibleShippingMethodsLimit]|sort((a, b) => a.position <=> b.position) %}
                 {% sw_include '@Storefront/storefront/component/shipping/shipping-method.html.twig' %}
             {% endfor %}
 
