--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
@@ -67,7 +67,7 @@
                     :get-label-property="getLabelProperty"
                     :total-lines="addressFormat.length"
                     @change="change"
-                    @drag-end="onDragEnd"
+                    @drop-end="onDropEnd"
                     @location-move="moveToLocation"
                     @add-new-line="addNewLineAt"
                     @open-snippet-modal="openSnippetModal"
