--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-new-snippet-modal/sw-settings-country-new-snippet-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-new-snippet-modal/sw-settings-country-new-snippet-modal.scss
@@ -39,6 +39,11 @@
         padding: 5px;
     }
 
+    .sw-tree-item .sw-tree-item__label {
+        font-size: $font-size-default;
+        text-transform: capitalize;
+    }
+
     &__search-field {
         position: relative;
 
