--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
@@ -68,7 +68,7 @@
                     :total-lines="addressFormat.length"
                     @change="change"
                     @drop-end="onDropEnd"
-                    @location-move="moveToLocation"
+                    @position-move="moveToNewPosition"
                     @add-new-line="addNewLineAt"
                     @open-snippet-modal="openSnippetModal"
                 />
